# taller-01

./: DESING.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  config.py  jwt_utils.py  main.py  models.py  pyproject.toml  tests.py
frontend/: README.md  app.py  session.py
frontend/pages/: 1_Bienvenida.py
